--- a/index.html
+++ b/index.html
@@ -44,50 +44,11 @@
                 <button class="button is-rounded is-dark is-normal">Search</button>
             </div>
 
+            <div class="column">
+                <button class="button is-rounded is-dark is-normal">My Campsite</button>
+            </div>
         </div>
     </div>
-
-    <!-- <div class="container is-flex-mobile">
-
-        <div class="columns is-marginless">
-
-            <div class="column">
-                <label class="checkbox level-left">
-                    <input type="checkbox" id="pet-allowed">
-                    Pet Allowed
-                </label>
-
-                <label class="checkbox level-left">
-                    <input type="checkbox" id="running-water">
-                    Running Water
-                </label>
-            </div>
-
-            <div class="column">
-                <label class="checkbox level-left">
-                    <input type="checkbox" id="electrictiry">
-                    Electrictiry
-                </label>
-
-                <label class="checkbox level-left">
-                    <input type="checkbox" id="shelters">
-                    Shelters
-                </label>
-            </div>
-
-            <div class="column">
-                <label class="checkbox level-left">
-                    <input type="checkbox" id="rv-parking">
-                    RV Parking
-                </label>
-
-                <label class="checkbox level-left">
-                    <input type="checkbox" id="general-store">
-                    General Store
-                </label>
-            </div>
-        </div>
-    </div> -->
 
     <div class="container block">
         <hr>
@@ -116,11 +77,6 @@
 
     </div>
 
-
-
-
-
-
     <footer class="footer has-background-dark">
         <div class="has-text-centered">
             Copyright 2020 @ CAMPSITE FINDER Foundation. All right reserved.
@@ -133,6 +89,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    
     <script>
         $(function () {
             var dateFormat = "mm/dd/yy",
@@ -169,9 +126,7 @@
 
 
 
-
     <script type="text/javascript">
-
 
         var states = ["AK", "AL", "AR", "AZ", "CA", "CO", "CT", "DE", "FL", "GA", "HI", "IA", "ID", "IL", "IN", "KS", "KY", "LA", "MA", "MD", "ME", "MI", "MN", "MO", "MS", "MT", "NC", "ND", "NE", "NH", "NJ", "NM", "NV", "NY", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VA", "VT", "WA", "WI", "WV", "WY"];
         for (var i = 0; i < states.length; i++) {
@@ -180,10 +135,7 @@
                 .appendTo($("#stateOptions"));
         }
 
-
-
-
-        var cityInput = "overland Park";
+        var cityInput = "Seattle";
         var apiKey = "443955fb6787f379caecf22f8c6f2f2e";
         var queryURL = "https://api.openweathermap.org/data/2.5/weather?q=" + cityInput + "&units=imperial&appid=" + apiKey;
 
@@ -192,10 +144,11 @@
             url: queryURL,
             method: 'GET'
 
-        }).then(function (res) {
+        }).then(function (res0) {
 
-            var lon = res.coord.lon;
-            var lat = res.coord.lat;
+            var lon = res0.coord.lon;
+            var lat = res0.coord.lat;
+            console.log(res0);
 
 
             jQuery.ajaxPrefilter(function (options) {
@@ -209,11 +162,11 @@
                 method: "GET",
                 crossDomain: true
 
-            }).then(function (res) {
-                console.log(res);
+            }).then(function (res1) {
+                console.log(res1);
 
-                for (var i = 1; i < res.RECDATA.length; i++) {
-                    console.log(res.RECDATA[i].FACILITYADDRESS[0].City);
+                for (var i = 1; i < res1.RECDATA.length; i++) {
+                    console.log(res1.RECDATA[i].FACILITYADDRESS[0].City);
                 }
 
             });
